// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navbar > Navbar baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-navbar t-safe-area-top t-navbar--visible-animation"
    data-v-fcc0cda1=""
    style="position: relative;"
  >
    <!---->
    <div
      class="t-navbar__content"
    >
      <div
        class="t-navbar__left"
      >
        <svg
          class="t-icon t-icon-chevron-left t-navbar__left-arrow"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
            fill="currentColor"
          />
        </svg>
        <!---->
        <!---->
      </div>
      <div
        class="t-navbar__center"
      >
        <span
          class="t-navbar__center-title"
        >
          标题文字
        </span>
      </div>
      <!---->
    </div>
  </div>
  <div
    class="t-navbar t-safe-area-top t-navbar--visible-animation"
    data-v-fcc0cda1=""
    style="position: relative;"
  >
    <!---->
    <div
      class="t-navbar__content"
    >
      <div
        class="t-navbar__left"
      >
        <svg
          class="t-icon t-icon-chevron-left t-navbar__left-arrow"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
            fill="currentColor"
          />
        </svg>
        
        <svg
          class="t-icon t-icon-close"
          data-v-fcc0cda1=""
          style="font-size: 24px;"
        >
          <use
            href="#t-icon-close"
          />
        </svg>
        
        <!---->
      </div>
      <div
        class="t-navbar__center"
      >
        <span
          class="t-navbar__center-title"
        >
          标题文字
        </span>
      </div>
      <div
        class="t-navbar__right"
      >
        
        <svg
          class="t-icon t-icon-ellipsis"
          data-v-fcc0cda1=""
          style="font-size: 24px;"
        >
          <use
            href="#t-icon-ellipsis"
          />
        </svg>
        
      </div>
    </div>
  </div>
  <div
    class="t-navbar t-safe-area-top t-navbar--visible-animation"
    data-v-fcc0cda1=""
    style="position: relative;"
  >
    <!---->
    <div
      class="t-navbar__content"
    >
      <div
        class="t-navbar__left"
      >
        <!---->
        <!---->
        <div
          class="t-navbar__capsule"
        >
          
          <div
            class="custom-capsule"
            data-v-fcc0cda1=""
          >
            <svg
              class="t-icon t-icon-chevron-left custom-capsule__icon"
              data-v-fcc0cda1=""
              style="font-size: 20px;"
            >
              <use
                href="#t-icon-chevron-left"
              />
            </svg>
            <div
              class="t-divider t-divider--vertical t-divider--center"
              data-v-fcc0cda1=""
              role="separator"
            >
              <div
                class="t-divider__content"
              >
                <!---->
              </div>
            </div>
            <svg
              class="t-icon t-icon-home custom-capsule__icon"
              data-v-fcc0cda1=""
              style="font-size: 20px;"
            >
              <use
                href="#t-icon-home"
              />
            </svg>
          </div>
          
        </div>
      </div>
      <div
        class="t-navbar__center"
      >
        <span
          class="t-navbar__center-title"
        >
          标题文字超...
        </span>
      </div>
      <div
        class="t-navbar__right"
      >
        
        <svg
          class="t-icon t-icon-ellipsis"
          data-v-fcc0cda1=""
          style="font-size: 24px;"
        >
          <use
            href="#t-icon-ellipsis"
          />
        </svg>
        
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Navbar > Navbar customColorVue demo works fine 1`] = `
<div
  class="t-navbar t-safe-area-top t-navbar--visible-animation custom-navbar"
  data-v-3ef3b10f=""
  style="position: relative;"
>
  <!---->
  <div
    class="t-navbar__content"
  >
    <div
      class="t-navbar__left"
    >
      <svg
        class="t-icon t-icon-chevron-left t-navbar__left-arrow"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
          fill="currentColor"
        />
      </svg>
      <!---->
      <!---->
    </div>
    <div
      class="t-navbar__center"
    >
      <span
        class="t-navbar__center-title"
      >
        标题文字
      </span>
    </div>
    <div
      class="t-navbar__right"
    >
      
      <svg
        class="t-icon t-icon-ellipsis"
        data-v-3ef3b10f=""
        style="font-size: 24px;"
      >
        <use
          href="#t-icon-ellipsis"
        />
      </svg>
      
    </div>
  </div>
</div>
`;

exports[`Navbar > Navbar imgVue demo works fine 1`] = `
<div
  class="t-navbar t-safe-area-top t-navbar--visible-animation"
  data-v-ed0b13d1=""
  style="position: relative;"
>
  <!---->
  <div
    class="t-navbar__content"
  >
    <div
      class="t-navbar__left"
    >
      <!---->
      
      <div
        class="t-image t-image--square logo"
        data-v-ed0b13d1=""
      >
        <div
          class="t-image__mask"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            <div
              class="t-loading__dots"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
            >
              
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
              />
              
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <picture>
          <!---->
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/mobile/demos/logo1.png"
            style="object-fit: fill; object-position: center;"
          />
        </picture>
      </div>
      
      <!---->
    </div>
    <div
      class="t-navbar__center"
    >
      <!---->
    </div>
    <div
      class="t-navbar__right"
    >
      
      <svg
        class="t-icon t-icon-home"
        data-v-ed0b13d1=""
        style="font-size: 24px;"
      >
        <use
          href="#t-icon-home"
        />
      </svg>
      <svg
        class="t-icon t-icon-ellipsis"
        data-v-ed0b13d1=""
        style="font-size: 24px;"
      >
        <use
          href="#t-icon-ellipsis"
        />
      </svg>
      
    </div>
  </div>
</div>
`;

exports[`Navbar > Navbar leftTitleVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-navbar t-safe-area-top t-navbar--visible-animation"
    data-v-593dba5f=""
    style="position: relative;"
  >
    <!---->
    <div
      class="t-navbar__content"
    >
      <div
        class="t-navbar__left"
      >
        <svg
          class="t-icon t-icon-chevron-left t-navbar__left-arrow"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
            fill="currentColor"
          />
        </svg>
        <!---->
        <!---->
      </div>
      <div
        class="t-navbar__center"
      >
        <span
          class="t-navbar__center-title"
        >
          标题居中
        </span>
      </div>
      <div
        class="t-navbar__right"
      >
        
        <svg
          class="t-icon t-icon-ellipsis"
          data-v-593dba5f=""
          style="font-size: 24px;"
        >
          <use
            href="#t-icon-ellipsis"
          />
        </svg>
        
      </div>
    </div>
  </div>
  <div
    class="t-navbar t-safe-area-top t-navbar--visible-animation"
    data-v-593dba5f=""
    style="position: relative;"
  >
    <!---->
    <div
      class="t-navbar__content"
    >
      <div
        class="t-navbar__left"
      >
        <svg
          class="t-icon t-icon-chevron-left t-navbar__left-arrow"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
            fill="currentColor"
          />
        </svg>
        
        <span
          class="custom-title"
          data-v-593dba5f=""
        >
          标题左对齐
        </span>
        
        <!---->
      </div>
      <div
        class="t-navbar__center"
      >
        <!---->
      </div>
      <div
        class="t-navbar__right"
      >
        
        <svg
          class="t-icon t-icon-home"
          data-v-593dba5f=""
          style="font-size: 24px;"
        >
          <use
            href="#t-icon-home"
          />
        </svg>
        <svg
          class="t-icon t-icon-ellipsis"
          data-v-593dba5f=""
          style="font-size: 24px;"
        >
          <use
            href="#t-icon-ellipsis"
          />
        </svg>
        
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Navbar > Navbar mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-0270c729=""
>
  <h1
    class="title"
    data-v-0270c729=""
  >
    NavBar 导航栏
  </h1>
  <p
    class="summary"
    data-v-0270c729=""
  >
    用于不同页面之间切换或者跳转，位于内容区的上方，系统状态栏的下方。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-0270c729=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础导航栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-navbar t-safe-area-top t-navbar--visible-animation"
        data-v-fcc0cda1=""
        style="position: relative;"
      >
        <!---->
        <div
          class="t-navbar__content"
        >
          <div
            class="t-navbar__left"
          >
            <svg
              class="t-icon t-icon-chevron-left t-navbar__left-arrow"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
                fill="currentColor"
              />
            </svg>
            <!---->
            <!---->
          </div>
          <div
            class="t-navbar__center"
          >
            <span
              class="t-navbar__center-title"
            >
              标题文字
            </span>
          </div>
          <!---->
        </div>
      </div>
      <div
        class="t-navbar t-safe-area-top t-navbar--visible-animation"
        data-v-fcc0cda1=""
        style="position: relative;"
      >
        <!---->
        <div
          class="t-navbar__content"
        >
          <div
            class="t-navbar__left"
          >
            <svg
              class="t-icon t-icon-chevron-left t-navbar__left-arrow"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
                fill="currentColor"
              />
            </svg>
            
            <svg
              class="t-icon t-icon-close"
              data-v-fcc0cda1=""
              style="font-size: 24px;"
            >
              <use
                href="#t-icon-close"
              />
            </svg>
            
            <!---->
          </div>
          <div
            class="t-navbar__center"
          >
            <span
              class="t-navbar__center-title"
            >
              标题文字
            </span>
          </div>
          <div
            class="t-navbar__right"
          >
            
            <svg
              class="t-icon t-icon-ellipsis"
              data-v-fcc0cda1=""
              style="font-size: 24px;"
            >
              <use
                href="#t-icon-ellipsis"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="t-navbar t-safe-area-top t-navbar--visible-animation"
        data-v-fcc0cda1=""
        style="position: relative;"
      >
        <!---->
        <div
          class="t-navbar__content"
        >
          <div
            class="t-navbar__left"
          >
            <!---->
            <!---->
            <div
              class="t-navbar__capsule"
            >
              
              <div
                class="custom-capsule"
                data-v-fcc0cda1=""
              >
                <svg
                  class="t-icon t-icon-chevron-left custom-capsule__icon"
                  data-v-fcc0cda1=""
                  style="font-size: 20px;"
                >
                  <use
                    href="#t-icon-chevron-left"
                  />
                </svg>
                <div
                  class="t-divider t-divider--vertical t-divider--center"
                  data-v-fcc0cda1=""
                  role="separator"
                >
                  <div
                    class="t-divider__content"
                  >
                    <!---->
                  </div>
                </div>
                <svg
                  class="t-icon t-icon-home custom-capsule__icon"
                  data-v-fcc0cda1=""
                  style="font-size: 20px;"
                >
                  <use
                    href="#t-icon-home"
                  />
                </svg>
              </div>
              
            </div>
          </div>
          <div
            class="t-navbar__center"
          >
            <span
              class="t-navbar__center-title"
            >
              标题文字超...
            </span>
          </div>
          <div
            class="t-navbar__right"
          >
            
            <svg
              class="t-icon t-icon-ellipsis"
              data-v-fcc0cda1=""
              style="font-size: 24px;"
            >
              <use
                href="#t-icon-ellipsis"
              />
            </svg>
            
          </div>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-0270c729=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带搜索导航栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-navbar t-safe-area-top t-navbar--visible-animation"
        data-v-0270c729=""
        data-v-614a1e54=""
        style="position: relative;"
      >
        <!---->
        <div
          class="t-navbar__content"
        >
          <div
            class="t-navbar__left"
          >
            <!---->
            
            <div
              data-v-614a1e54=""
            >
              <div
                class="t-search"
              >
                <div
                  class="t-search__input-box t-search__input-box--round"
                >
                  <svg
                    class="t-icon t-icon-search"
                    fill="none"
                    height="1em"
                    style="font-size: 24px;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M15.0962 5.90381C12.5578 3.3654 8.44221 3.3654 5.90381 5.90381C3.3654 8.44221 3.3654 12.5578 5.90381 15.0962C8.44221 17.6346 12.5578 17.6346 15.0962 15.0962C17.6346 12.5578 17.6346 8.44221 15.0962 5.90381ZM4.48959 4.48959C7.80905 1.17014 13.191 1.17014 16.5104 4.48959C19.5906 7.56983 19.8126 12.4259 17.1764 15.7621L22.5208 21.1066L21.1066 22.5208L15.7621 17.1764C12.4259 19.8126 7.56983 19.5906 4.48959 16.5104C1.17014 13.191 1.17014 7.80905 4.48959 4.48959Z"
                      fill="currentColor"
                    />
                  </svg>
                  <input
                    class="t-input__keyword"
                    enterkeyhint="search"
                    placeholder="搜索预设文案"
                    type="search"
                  />
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
            
            <!---->
          </div>
          <div
            class="t-navbar__center"
          >
            <!---->
          </div>
          <div
            class="t-navbar__right"
          >
            
            <svg
              class="t-icon t-icon-home"
              data-v-614a1e54=""
              style="font-size: 24px;"
            >
              <use
                href="#t-icon-home"
              />
            </svg>
            <svg
              class="t-icon t-icon-ellipsis"
              data-v-614a1e54=""
              style="font-size: 24px;"
            >
              <use
                href="#t-icon-ellipsis"
              />
            </svg>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-0270c729=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带图片导航栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-navbar t-safe-area-top t-navbar--visible-animation"
        data-v-0270c729=""
        data-v-ed0b13d1=""
        style="position: relative;"
      >
        <!---->
        <div
          class="t-navbar__content"
        >
          <div
            class="t-navbar__left"
          >
            <!---->
            
            <div
              class="t-image t-image--square logo"
              data-v-ed0b13d1=""
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/logo1.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            
            <!---->
          </div>
          <div
            class="t-navbar__center"
          >
            <!---->
          </div>
          <div
            class="t-navbar__right"
          >
            
            <svg
              class="t-icon t-icon-home"
              data-v-ed0b13d1=""
              style="font-size: 24px;"
            >
              <use
                href="#t-icon-home"
              />
            </svg>
            <svg
              class="t-icon t-icon-ellipsis"
              data-v-ed0b13d1=""
              style="font-size: 24px;"
            >
              <use
                href="#t-icon-ellipsis"
              />
            </svg>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-0270c729=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        标题对齐
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-navbar t-safe-area-top t-navbar--visible-animation"
        data-v-593dba5f=""
        style="position: relative;"
      >
        <!---->
        <div
          class="t-navbar__content"
        >
          <div
            class="t-navbar__left"
          >
            <svg
              class="t-icon t-icon-chevron-left t-navbar__left-arrow"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
                fill="currentColor"
              />
            </svg>
            <!---->
            <!---->
          </div>
          <div
            class="t-navbar__center"
          >
            <span
              class="t-navbar__center-title"
            >
              标题居中
            </span>
          </div>
          <div
            class="t-navbar__right"
          >
            
            <svg
              class="t-icon t-icon-ellipsis"
              data-v-593dba5f=""
              style="font-size: 24px;"
            >
              <use
                href="#t-icon-ellipsis"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="t-navbar t-safe-area-top t-navbar--visible-animation"
        data-v-593dba5f=""
        style="position: relative;"
      >
        <!---->
        <div
          class="t-navbar__content"
        >
          <div
            class="t-navbar__left"
          >
            <svg
              class="t-icon t-icon-chevron-left t-navbar__left-arrow"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
                fill="currentColor"
              />
            </svg>
            
            <span
              class="custom-title"
              data-v-593dba5f=""
            >
              标题左对齐
            </span>
            
            <!---->
          </div>
          <div
            class="t-navbar__center"
          >
            <!---->
          </div>
          <div
            class="t-navbar__right"
          >
            
            <svg
              class="t-icon t-icon-home"
              data-v-593dba5f=""
              style="font-size: 24px;"
            >
              <use
                href="#t-icon-home"
              />
            </svg>
            <svg
              class="t-icon t-icon-ellipsis"
              data-v-593dba5f=""
              style="font-size: 24px;"
            >
              <use
                href="#t-icon-ellipsis"
              />
            </svg>
            
          </div>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-0270c729=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        标题尺寸
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-navbar t-safe-area-top t-navbar--visible-animation"
        data-v-f6e31b98=""
        style="position: relative;"
      >
        <!---->
        <div
          class="t-navbar__content"
        >
          <div
            class="t-navbar__left"
          >
            <svg
              class="t-icon t-icon-chevron-left t-navbar__left-arrow"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
                fill="currentColor"
              />
            </svg>
            <!---->
            <!---->
          </div>
          <div
            class="t-navbar__center"
          >
            <span
              class="t-navbar__center-title"
            >
              标题文字
            </span>
          </div>
          <div
            class="t-navbar__right"
          >
            
            <svg
              class="t-icon t-icon-ellipsis"
              data-v-f6e31b98=""
              style="font-size: 24px;"
            >
              <use
                href="#t-icon-ellipsis"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="t-navbar t-safe-area-top t-navbar--visible-animation custom-navbar"
        data-v-f6e31b98=""
        style="position: relative;"
      >
        <!---->
        <div
          class="t-navbar__content"
        >
          <div
            class="t-navbar__left"
          >
            <svg
              class="t-icon t-icon-chevron-left t-navbar__left-arrow"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
                fill="currentColor"
              />
            </svg>
            <!---->
            <!---->
          </div>
          <div
            class="t-navbar__center"
          >
            <!---->
          </div>
          <div
            class="t-navbar__right"
          >
            
            <svg
              class="t-icon t-icon-home"
              data-v-f6e31b98=""
              style="font-size: 24px;"
            >
              <use
                href="#t-icon-home"
              />
            </svg>
            <svg
              class="t-icon t-icon-ellipsis"
              data-v-f6e31b98=""
              style="font-size: 24px;"
            >
              <use
                href="#t-icon-ellipsis"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="header-title"
        data-v-f6e31b98=""
      >
        大尺寸标题
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-0270c729=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义颜色
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-navbar t-safe-area-top t-navbar--visible-animation custom-navbar"
        data-v-0270c729=""
        data-v-3ef3b10f=""
        style="position: relative;"
      >
        <!---->
        <div
          class="t-navbar__content"
        >
          <div
            class="t-navbar__left"
          >
            <svg
              class="t-icon t-icon-chevron-left t-navbar__left-arrow"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
                fill="currentColor"
              />
            </svg>
            <!---->
            <!---->
          </div>
          <div
            class="t-navbar__center"
          >
            <span
              class="t-navbar__center-title"
            >
              标题文字
            </span>
          </div>
          <div
            class="t-navbar__right"
          >
            
            <svg
              class="t-icon t-icon-ellipsis"
              data-v-3ef3b10f=""
              style="font-size: 24px;"
            >
              <use
                href="#t-icon-ellipsis"
              />
            </svg>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Navbar > Navbar searchVue demo works fine 1`] = `
<div
  class="t-navbar t-safe-area-top t-navbar--visible-animation"
  data-v-614a1e54=""
  style="position: relative;"
>
  <!---->
  <div
    class="t-navbar__content"
  >
    <div
      class="t-navbar__left"
    >
      <!---->
      
      <div
        data-v-614a1e54=""
      >
        <div
          class="t-search"
        >
          <div
            class="t-search__input-box t-search__input-box--round"
          >
            <svg
              class="t-icon t-icon-search"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.0962 5.90381C12.5578 3.3654 8.44221 3.3654 5.90381 5.90381C3.3654 8.44221 3.3654 12.5578 5.90381 15.0962C8.44221 17.6346 12.5578 17.6346 15.0962 15.0962C17.6346 12.5578 17.6346 8.44221 15.0962 5.90381ZM4.48959 4.48959C7.80905 1.17014 13.191 1.17014 16.5104 4.48959C19.5906 7.56983 19.8126 12.4259 17.1764 15.7621L22.5208 21.1066L21.1066 22.5208L15.7621 17.1764C12.4259 19.8126 7.56983 19.5906 4.48959 16.5104C1.17014 13.191 1.17014 7.80905 4.48959 4.48959Z"
                fill="currentColor"
              />
            </svg>
            <input
              class="t-input__keyword"
              enterkeyhint="search"
              placeholder="搜索预设文案"
              type="search"
            />
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
      
      <!---->
    </div>
    <div
      class="t-navbar__center"
    >
      <!---->
    </div>
    <div
      class="t-navbar__right"
    >
      
      <svg
        class="t-icon t-icon-home"
        data-v-614a1e54=""
        style="font-size: 24px;"
      >
        <use
          href="#t-icon-home"
        />
      </svg>
      <svg
        class="t-icon t-icon-ellipsis"
        data-v-614a1e54=""
        style="font-size: 24px;"
      >
        <use
          href="#t-icon-ellipsis"
        />
      </svg>
      
    </div>
  </div>
</div>
`;

exports[`Navbar > Navbar sizeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-navbar t-safe-area-top t-navbar--visible-animation"
    data-v-f6e31b98=""
    style="position: relative;"
  >
    <!---->
    <div
      class="t-navbar__content"
    >
      <div
        class="t-navbar__left"
      >
        <svg
          class="t-icon t-icon-chevron-left t-navbar__left-arrow"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
            fill="currentColor"
          />
        </svg>
        <!---->
        <!---->
      </div>
      <div
        class="t-navbar__center"
      >
        <span
          class="t-navbar__center-title"
        >
          标题文字
        </span>
      </div>
      <div
        class="t-navbar__right"
      >
        
        <svg
          class="t-icon t-icon-ellipsis"
          data-v-f6e31b98=""
          style="font-size: 24px;"
        >
          <use
            href="#t-icon-ellipsis"
          />
        </svg>
        
      </div>
    </div>
  </div>
  <div
    class="t-navbar t-safe-area-top t-navbar--visible-animation custom-navbar"
    data-v-f6e31b98=""
    style="position: relative;"
  >
    <!---->
    <div
      class="t-navbar__content"
    >
      <div
        class="t-navbar__left"
      >
        <svg
          class="t-icon t-icon-chevron-left t-navbar__left-arrow"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M15.9144 17.5L10.4144 12L15.9144 6.50003L14.5002 5.08582L7.58594 12L14.5002 18.9142L15.9144 17.5Z"
            fill="currentColor"
          />
        </svg>
        <!---->
        <!---->
      </div>
      <div
        class="t-navbar__center"
      >
        <!---->
      </div>
      <div
        class="t-navbar__right"
      >
        
        <svg
          class="t-icon t-icon-home"
          data-v-f6e31b98=""
          style="font-size: 24px;"
        >
          <use
            href="#t-icon-home"
          />
        </svg>
        <svg
          class="t-icon t-icon-ellipsis"
          data-v-f6e31b98=""
          style="font-size: 24px;"
        >
          <use
            href="#t-icon-ellipsis"
          />
        </svg>
        
      </div>
    </div>
  </div>
  <div
    class="header-title"
    data-v-f6e31b98=""
  >
    大尺寸标题
  </div>
  
</div>
`;
